# c-autotools-template

./: .gitignore  .gitmodules  Makefile.am  README.md  configure.ac  project.mk
scripts/: makemake.py  newmod.py  superclean.py
src/cfgfile/: cfgfile.c  cfgfile.h  cfgmap.c  cfgmap.h  module.cfg
src/executor/: executor.c  executor.h  module.cfg
src/myapp/: module.cfg  myapp.c
src/reporter/: module.cfg  reporter.c  reporter.h
src/testmod/: module.cfg  module.mk  testmod.c  testmod.h
tests/cfgfile/: test_cfgfile.c
tests/executor/: test_executor.c
tests/testmod/: test_testmod.c
